I08 config changes to remove I18 stuff and get server started